src/test/ui/did_you_mean/issue-37139.stderr
error[E0596]: cannot borrow immutable local variable `x` as mutable
  --> $DIR/issue-37139.rs:12:23
   |
LL |             test(&mut x); //~ ERROR cannot borrow immutable
   |                       ^
   |                       |
   |                       cannot reborrow mutably
   |                       try removing `&mut` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
